Wed Jun 18 12:50:15 2003  George Edwards <g.edwards@vanderbilt.edu>

        * TAO_IDL/be_include/be_visitor_valuetype/valuetype.h
        * TAO_IDL/be/be_visitor_valuetype/valuetype.cpp
          
          Fixed bug in factory generation for valuetypes that
          support interfaces


Wed Jun 18 12:47:17 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/BiDir_GIOP/BiDir_Policy_i.cpp:
        * tao/Domain/DomainS.cpp:
        * tao/Messaging/MessagingS.cpp:
        * tao/PortableServer/ImR_LocatorS.cpp:
        * tao/PortableServer/ImplRepoS.cpp:
        * tao/PortableServer/PolicyS.cpp:

	  Added call to TAO_Abstract_ServantBase in the copy constructor
	  and/or fixed the order of base class constructor calls in the
	  copy constructor.


Wed Jun 18 12:13:41 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_enum.cpp:
        * TAO_IDL/be/be_eventtype.cpp:
        * TAO_IDL/be/be_eventtype_fwd.cpp:
        * TAO_IDL/be/be_union_fwd.cpp:

          Fixed mistakes in constructor reordering from

	        Tue Jun 17 09:56:38 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

Wed Jun 18 13:53:22 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/RTEvent.dsp:
        * orbsvcs/orbsvcs/RTEvent_Static.dsp:
          Removed EC_Gateway_UDP.{h,i} from both dsps.

Wed Jun 18 13:17:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Makefile.RTEvent:
          Updated dependencies.

Wed Jun 18 08:48:51 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/EC_MT_Mcast/MCast.cpp:
        * orbsvcs/tests/EC_MT_Mcast/Makefile:
          Updated this test for all RTEC changes and updated dependencies

Wed Jun 18 08:18:22 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/EC_Mcast/EC_Mcast.h:
          Fixed type

        * orbsvcs/tests/EC_Mcast/Makefile:
        * orbsvcs/tests/Event/Basic/Makefile:
          Updated dependencies
